Feature: add ability to optionally use jdk.incubator.vector (aka Project Panama, aka SIMD) for faster dense float vector operations  (#496)